Revert "Revert "Fix z-index of carousel indicators""
This reverts commit 2e0070498305dd4930ae61d07b2e23ef48d56f13.

--- a/ferrerih_qfg1_stylesheet.css
+++ b/ferrerih_qfg1_stylesheet.css
@@ -109,6 +109,7 @@ body:before {
 	bottom: -50px;
 	left: 42%;
 	width: 73%;
+	z-index: 0 !important;
 }
 .carousel-indicators li {
 	border-color: #b30000 !important; 
@@ -622,6 +623,7 @@ button, .btn {
 }
 .carousel-indicators {
 	bottom: 0px;
+	z-index: 1 !important;
 }
 .center {
 	width: 55%; 
@@ -729,6 +731,7 @@ ul.affix {
 }
 .carousel-indicators {
 	bottom: 0px;
+	z-index: 1 !important;
 }
 .center {
 	width: 50%; 
